@@ -2,7 +2,6 @@
 
 * tk GUI
   + view description of level set in 'load set' dialog
-  + add a scrollbar to the 'load set' dialog.
   + adjust window size to map size
   + fix bug 1
   + fix bug 2
